--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js
     "></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="icon" href="https://buildwithangga.com/themes/front/images/logo_bwa_new.svg">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="css/stylesheet.css">
-    <title>Document</title>
+    <title>BWA Web Design Task</title>
 </head>
 
 <body>
